# python-template

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: codequality.yml  create_image.yml  format_and_lint.yml
src/python_template/: __init__.py  logging.py  utils.py
tests/: __init__.py  test_template.py  test_utils.py
